# medat-app

./: .gitignore  CLAUDE.md  README.md  index.html
data/: DATA_FORMAT.md  generate_50_zahlenfolgen.py  pyproject.toml
data/deprecated/tests/: test_converter.py
data/output/figuren/: 001_question.txt  002_question.txt  003_question.txt  004_question.txt  005_question.txt  006_question.txt  007_question.txt  008_question.txt  009_question.txt  010_question.txt  011_question.txt  012_question.txt  013_question.txt  014_question.txt  015_question.txt  016_question.txt  017_question.txt  018_question.txt  019_question.txt  020_question.txt  021_question.txt  022_question.txt  023_question.txt  024_question.txt  025_question.txt  026_question.txt  027_question.txt  028_question.txt  029_question.txt  030_question.txt  031_question.txt  032_question.txt  033_question.txt  034_question.txt  035_question.txt  036_question.txt  037_question.txt  038_question.txt  039_question.txt  040_question.txt  (+103 more)
data/output/implikationen/: 0071_question.txt  0072_question.txt  0073_question.txt  0074_question.txt  0075_question.txt  0076_question.txt  0077_question.txt  0078_question.txt  0079_question.txt  0080_question.txt  0081_question.txt  0082_question.txt  0083_question.txt  0084_question.txt  0085_question.txt  0086_question.txt  0087_question.txt  0088_question.txt  0089_question.txt  0090_question.txt  0091_question.txt  0092_question.txt  0093_question.txt  0094_question.txt  0095_question.txt  0096_question.txt  0097_question.txt  0098_question.txt  0099_question.txt  0100_question.txt  0101_question.txt  0102_question.txt  0103_question.txt  0104_question.txt  0105_question.txt  0106_question.txt  0107_question.txt  0108_question.txt  0109_question.txt  0110_question.txt  (+1030 more)
data/output/wortfluessigkeit/: 0001_question.txt  0001_solution.txt  0002_question.txt  0002_solution.txt  0003_question.txt  0003_solution.txt  0004_question.txt  (+3264 more)
data/tests/: test_converter.py  test_parsers.py  test_utils.py
(+6745 files in other folders)
