[project]
name = "medat-parser"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.10",
    "pdfplumber>=0.11",
    "pillow>=11.0",
    "pymupdf>=1.25",
]

[project.scripts]
medat-parse = "medat_parser.pdf_parser:main"
medat-convert = "medat_parser.converter:main"
medat-merge = "medat_parser.merge:main"
medat-extract-images = "medat_parser.extract_ausweise_images:main"
medat-generate-implikationen = "medat_parser.generate_implikationen:main"
medat-generate-zahlenfolgen = "medat_parser.generate_zahlenfolgen:main"

[tool.ruff]
target-version = "py313"
line-length = 100
exclude = ["deprecated", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]


[tool.pytest.ini_options]
norecursedirs = ["deprecated", ".venv", ".git"]

[tool.ty.rules]
untyped = "error"
